--- a/head.yaml
+++ b/head.yaml
@@ -14,6 +14,17 @@
           - haproxy
       become: true
 
+    - name: haproxy configuration
+      template:
+        src: "templates/etc/{{ item }}.j2"
+        dest: "/etc/{{ item }}"
+        mode: 0640
+        owner: haproxy
+        group: haproxy
+      with_items:
+        - haproxy/haproxy.cfg
+      become: true
+
     - name: restart systemd services
       systemd: name={{ item }} enabled=true state=restarted
       with_items:
