--- a/inventory.yaml
+++ b/inventory.yaml
@@ -8,10 +8,14 @@ all:
       hosts: localhost
       vars:
         workers:
-          - name: localhost
+          - name: work11
+            ipv4: "127.0.0.1"
+          - name: work12
+            ipv4: "127.0.0.1"
+          - name: work13
             ipv4: "127.0.0.1"
     work:
-      hosts: localhost
+      hosts: [work11, work12, work13]
       vars:
         master_ip: "127.0.0.1"
-        quorum: 1
+        quorum: 2
